Fixed Navbar clipping issue

--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ header{
     flex-wrap: wrap;
     transition: 0.6s;
     padding: 10px 10%;
+    z-index: 10000;
 }
 header.sticky{
     padding: 5px 10%;
